# ChangeLog for www-apps/froxlor
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 May 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild:
  tweak php 5.3 depends, depend on virtual/mysql instead of dev-db/mysql

*froxlor-0.9.7 (17 May 2010)

  17 May 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.6.ebuild, +froxlor-0.9.7.ebuild:
  version bump, remove old

*froxlor-0.9.6 (03 May 2010)

  03 May 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.5.ebuild, +froxlor-0.9.6.ebuild:
  version bump, remove old

*froxlor-0.9.5 (19 Apr 2010)

  19 Apr 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.4.ebuild, +froxlor-0.9.5.ebuild:
  version bump, remove old

  16 Apr 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild:
  support PHP 5.3, this is considered WIP until it hits the portage tree

  11 Apr 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.4.ebuild, froxlor-9999.ebuild:
  fixup bind permissions, bug 135

  10 Apr 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.4.ebuild, froxlor-9999.ebuild:
  add pl to linguas, drop app-arch/unzip depend, we just expect people to
  have a non-broken php version around

*froxlor-0.9.4 (05 Apr 2010)

  10 Apr 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.4.ebuild, froxlor-9999.ebuild:
  add AWStats useflag

  05 Apr 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.3.ebuild, +froxlor-0.9.4.ebuild:
  version bump, remove old

  25 Mar 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.3.ebuild, froxlor-9999.ebuild:
  adding ability to define the docroot in /etc/make.conf with
  FROXLOR_DOCROOT

  18 Mar 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.3.ebuild, froxlor-9999.ebuild:
  add note for cron changes and fix messed up quoting

  16 Mar 2010; Froxlor Release Team <release@froxlor.org>