@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*froxlor-0.9.8 (31 May 2010)
+
+  31 May 2010; Froxlor Release Team <release@froxlor.org>
+  -froxlor-0.9.7.ebuild, +froxlor-0.9.8.ebuild:
+  version bump, remove old
+
   28 May 2010; Froxlor Release Team <release@froxlor.org>
   froxlor-9999.ebuild:
   tweak php 5.3 depends, depend on virtual/mysql instead of dev-db/mysql
